--- a/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
+++ b/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
@@ -394,13 +394,11 @@
 /*********************** gw Banner *********************/
 .site-message--gw-banner {
     &.site-message--subscription-banner {
-        // background-color: #333333;
-        background-color: #3E474A;
+        background-color: #3e474a;
         padding: 30px 20px;
     }
 
     .site-message--subscription-banner__description {
-        // width: 48%;
 
         @include mq($from: wide) {
             width: 48%;
@@ -432,7 +430,7 @@
     }
 
     .site-message--subscription-banner__close-button svg {
-        border: 0.0625rem solid $brightness-97;
+        border: 1px solid $brightness-97;
     }
 
     .site-message--subscription-banner__close-button svg path {
