--- a/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
+++ b/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
@@ -413,6 +413,10 @@
         }
 
         @include mq($from: leftCol) {
+            width: 46%;
+        }
+
+        @include mq($from: wide) {
             width: 47%;
         }
 
@@ -476,6 +480,8 @@
 
             @include mq($from: tablet) {
                 max-width: 325px;
+                margin-right: 0;
+                margin-left: auto;
             }
 
             @media (min-width: 781px) {
@@ -488,10 +494,17 @@
 
             @include mq($from: desktop) {
                 max-width: 340px;
+                margin-left: auto;
+                margin-right: 100px;
             }
 
             @include mq($from: leftCol) {
                 max-width: 540px;
+
+            }
+
+            @include mq($from: wide) {
+                margin-right: 100px;
             }
         }
     }
