--- a/commercial/app/views/passback.scala.html
+++ b/commercial/app/views/passback.scala.html
@@ -1,12 +1,17 @@
-@(dfpNetworkId: String, adUnitName: String, passbackTarget: String, width: Int, height: Int)
+@(dfpNetworkId: String, adUnitName: String, passbackTarget: String, width: Int, height: Int, useNewGptPath: Boolean)
 
 <head>
   <title>Passback for '@adUnitName' Size: [[@width,@height]]</title>
 </head>
 <body style="margin: 0;">
-  <script src='https://securepubads.g.doubleclick.net/tag/js/gpt.js'>
+    <script src='@{if(useNewGptPath) "https://securepubads.g.doubleclick.net/tag/js/gpt.js" else "https://www.googletagservices.com/tag/js/gpt.js"}>
+
     googletag.pubads().definePassback('/@dfpNetworkId/@adUnitName', [[@width,@height]])
       .setTargeting('passback', ['@passbackTarget'])
       .display();
-  </script>
+  </script>  </script>
 </body>
+
+
+
+
